# liquity-example

./: README.md  hardhat.config.ts  package-lock.json  package.json  pnpm-lock.yaml  remappings.txt  tsconfig.json
contracts/src/example1/: example1.sol
contracts/src/example1/admin/: Admin.sol  AdminLib.sol
contracts/src/example1/chainlink/: Chainlink.sol
contracts/src/example1/eip2535/upgrade/: DiamondInit.sol
contracts/src/example1/error/: ErrorLib.sol
contracts/src/example1/event/: EventLib.sol
contracts/src/example1/receiver/: Receiver.sol  ReceiverLib.sol
scripts/: deploy.ts  diamond.ts  get_state.ts
switchboard-function/: Cargo.toml  Dockerfile  Makefile  build.rs  package.json
switchboard-function/src/: main.rs
switchboard-function/src/kraken/: mod.rs
switchboard-function/src/pyth/: mod.rs
