[package]
name = "basic-oracle-function"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "basic-oracle-function"
path = "src/main.rs"

[dependencies]
tokio = "^1"
futures = "0.3"
serde = "^1"
serde_json = "^1"
switchboard-utils = { version = "0.8.0" }
ethers = { version = "2.0.7", features = ["legacy"] }
rand = "0.8.5"
switchboard-common = "0.8.6"
switchboard-evm = "0.3.8"
bytemuck = "1.13.1"
rust_decimal = { version = "1.30.0", features = ["maths", "serde"] }
chrono = "0.4.28"
base64 = "0.21.3"
ethers-core = "2.0.9"

[dev-dependencies]
env_logger = "0.10"
test-log = "0.2.12"
